whatsapp supports migration to iOS

--- a/content/posts/migrate-whatsapp-from-android-to-ios.mdx
+++ b/content/posts/migrate-whatsapp-from-android-to-ios.mdx
@@ -3,6 +3,10 @@ title: Migrate WhatsApp Chats from Android to iOS
 date: 2021-12-18
 ---
 
+UPDATE (November 13, 2022): Apparently WhatsApp now supports [migrating chats between different OS](https://faq.whatsapp.com/530788665445780/).
+
+--- 
+
 I haven't posted for a very long time, this is the opportunity to give some space 
 to some experiments I have done recently 🚀.
 
