--- a/content/posts/160-days-ago/index.mdx
+++ b/content/posts/160-days-ago/index.mdx
@@ -2,7 +2,7 @@
 title: 160 days ago
 date: 2016-11-23
 ---
-![](../assets/posts/Collage_pierreframes.jpg)
+![](./Collage_pierreframes.jpg)
 
 I suppose you're asking yourself what happened 160 days ago, aren't you? I launched a new project,&nbsp;<a href="http://instagram.com/pierreframes">pierreframes</a>.
 
