--- a/content/posts/grannys-app/index.mdx
+++ b/content/posts/grannys-app/index.mdx
@@ -2,7 +2,7 @@
 title: Granny's App
 date: 2015-04-05
 ---
-![](../assets/posts/DSC_0194-1.jpg)
+![](./DSC_0194-1.jpg)
 
 In Gennaio ho partecipato ad un concorso promosso dall'[Expo di Milano](http://www.expo2015.org) agli studenti di scuola superiore.
 
@@ -14,10 +14,11 @@ In poche parole il progetto **Granny's App** propone una applicazione per smartp
 
 Il tutto è iniziato con un lavoro a gruppi per rielaborare varie ricette locali. Poi, dopo aver deciso il nome del progetto, ognuno si è messo in gioco con le proprie abilità!
 
-![](../assets/posts/Index-app-1_galaxys4_white_portrait-1024x1024-1.png)
+![](./Index-app-1_galaxys4_white_portrait-1024x1024-1.png)
 
 
 La pazzia mi ha portato a realizzare un applicazione prototipo, per rendere il video più realistico, in puro [Material Design](https://en.wikipedia.org/wiki/Material_Design). Nel video potrete vedere la demo in Prato della Valle!
 
 Grazie a tutti!
-<div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/118398900?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+
+<iframe title="vimeo-player" src="https://player.vimeo.com/video/118398900?h=0d7f910300" width="640" height="360" frameborder="0" allowfullscreen></iframe>
