--- a/content/posts/left-vs-right-click/index.mdx
+++ b/content/posts/left-vs-right-click/index.mdx
@@ -3,7 +3,7 @@ title:  Left vs. right-click
 date:   2017-07-16
 ---
 
-![](../assets/posts/keyboard-plus-mouse.jpg)
+![](./keyboard-plus-mouse.jpg)
 
 At this moment I spent one month working for the Digital Summer Camps and this morning I was thinking about a funny fact.
 
