--- a/content/posts/migrate-whatsapp-from-android-to-ios/index.mdx
+++ b/content/posts/migrate-whatsapp-from-android-to-ios/index.mdx
@@ -20,9 +20,9 @@ Worth mentioning, this solution is a bit _hacky_. [Only text messages would be m
 This means media (pictures and videos) and audio notes won't be migrated to the new device.
 Instead, a placeholder would be display instead such as `<image>` or `<audio>`.
 
-![](../assets/IMG_0038.jpg)
+![](./IMG_0038.jpg)
 
-![](../assets/IMG_0037.jpg)
+![](./IMG_0037.jpg)
 
 Therefore, it is necessary to have XCode installed. 
 
@@ -39,7 +39,7 @@ it as previously done in step 4). Following the [step-by-step guide](https://git
 iPhone will be created (with the new MacOS version must be done using Finder and not iTunes) - therefore, the idea is to inject inside the existing backup the history stored in the backup
 created previously on the Android device. Finally, restore the iPhone from the updated backup.
 
-![](../assets/IMG_0039.jpg)
+![](./IMG_0039.jpg)
 
 A part of the groups, all the chats will be listed in the 'Archived' tab.
 Although, when opening a chat all the saved messages will be displayed!
