--- a/content/posts/3d-printer/index.mdx
+++ b/content/posts/3d-printer/index.mdx
@@ -2,7 +2,7 @@
 title: 3D Printer ;)
 date: 2014-03-16
 ---
-![](../assets/posts/tumblr_n2jsfddVmW1rtrho6o1_1280.jpg)
+![](./tumblr_n2jsfddVmW1rtrho6o1_1280.jpg)
 
 Me and Cesare Cacitti's 3D printer: masterpiece!
 
