--- a/content/pages/about/index.mdx
+++ b/content/pages/about/index.mdx
@@ -7,7 +7,7 @@ slug: "/about"
 
 <h2 align="center">Ciao 👋 I'm Pietro!</h2>
 
-I'm from Padova, near the Venice, and moved to Denmark for my studies. 
+I'm from Padova, near Venice, and moved to Denmark for my studies. 
 I'm currently working in engineering within the finance industry in Copenhagen.
 
 I'm a Senior Software and Data Engineer at [Nykredit](https://www.nykredit.com) in Wealth & Asset Management. 
