add preprint link

--- a/content/pages/projects/index.mdx
+++ b/content/pages/projects/index.mdx
@@ -5,7 +5,7 @@ slug: "/projects"
 
 ## Movi by Mobike (Analytics)
 
-The research focus on leveraging [Movi](https://www.ridemovi.com/) (formely Mobike Italy) data, 
+The research focus on leveraging [Ride Movi](https://www.ridemovi.com/) (formely Mobike Italy) data, 
 a free floating bike sharing system, to study urban mobility in Padova (Italy), through descriptive and cluster 
 analysis.
 
@@ -14,7 +14,7 @@ analysis.
 > I Want to Ride my Bicycle: Leveraging Mobike Data 
 > to Study Mobility in Padova, Italy
 
-#### [Poster](/Mobike-IC2S2-Poster.jpg)
+#### [Poster](/Mobike-IC2S2-Poster.jpg) - [Preprint](https://osf.io/preprints/socarxiv/bd8p4)
 
 **Co-authors:**
 [Katherine Hoffmann Pham](https://katherinehoffmannpham.com/) (UN Global Pulse), [Francesco Rampazzo](https://francescorampazzo.com)
