add favicon, replaced twitter with bluesky, and some other minor changes

--- a/content/pages/about/index.mdx
+++ b/content/pages/about/index.mdx
@@ -10,9 +10,9 @@ slug: "/about"
 I'm from Padova, near Venice, and moved to Denmark for my studies. 
 I'm currently working in engineering within the finance industry in Copenhagen.
 
-I'm a Senior Software and Data Engineer at [Nykredit](https://www.nykredit.com) in Wealth & Asset Management. 
-I focus on working with data, building resilient integrations with several systems, 
-enabling users to consume it, and adopting a cloud-first approach.
+I'm a Senior Data Engineer at [Nykredit](https://www.nykredit.com/en-gb/) in Wealth & Asset Management. 
+I focus on Wealth data modernization, building resilient integrations with various systems, enabling users to consume data effectively, and adopting a cloud-first approach. 
+I'm also part of the Nykredit Data CoE.
 
 I completed a Master of Science in Engineering in Human-Centered AI at the [Technical University of Denmark](https://www.dtu.dk/english) 
 and a B.Sc. in Computer Science at [Ca' Foscari University of Venice](https://www.unive.it/pag/13526).
@@ -24,11 +24,13 @@ land-use data from OpenStreetMap. In February 2022 for my Master's thesis, I joi
 (part of the Danish State Railway) to study the users' usage data of [Kørmit](https://www.koermit.dk/). This is a
 mobility service, which aims to solve the last-mile problem for commuters to reach their workplace from the closest train station.
 
-Moving to a different country makes you change your habits, and since Denmark is flat, I've had to adapt. 
-I've traded mountain hiking in the Dolomites for road cycling and rowing. 
+Moving to a different country changes your habits, and since Denmark is flat, I've had to adapt.
+I've traded mountain hiking in the Dolomites for road cycling and ~rowing~ running. 
+From time to time, a good bouldering or padel session is also a great alternative when the weather isn’t ideal.
+
 I also enjoy photography and have published some of my work on [Unsplash](https://unsplash.com/@peterampazzo).
 
-You can find me on [Twitter](https://twitter.com/peterampazzo) /
+You can find me on [BlueSky](https://bsky.app/profile/peterampazzo.com) /
     [GitHub](https://github.com/peterampazzo) /
     [LinkedIn](https://linkedin.com/in/peterampazzo/)
 or you can also [email](mailto:pietro@rampazzo.eu) me.
